@@ -4,7 +4,7 @@ Changelog
 trunk (0.2dev)
 --------------
 
-- no changes yet
+- refactored [hplocher]
 
 0.1 (2009-05-12)
 ----------------
